# pytid

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
doc/: .gitignore  Makefile  abstract.tex  bibliography.bib  nytid.tex  preamble.tex  pytid.tex
doc/figs/: .gitignore  Makefile  timesheet-dbosk.xlsx
src/nytid/: Makefile  schedules.nw
src/nytid/cli/: .gitignore  Makefile  amanuens.py  assar.py  booked.py  config.py  courses.nw  hr.nw  init.nw  missing.py  myics.py  recruit.nw  report.py  schedule.nw  schedule.py  signupsheets.nw  time.py  timesheet.py
src/nytid/cli/config/: init.nw
src/nytid/courses/: init.nw  registry.nw
src/nytid/schedules/: utils.nw
src/nytid/signup/: Makefile  hr.nw  sheets.nw  utils.nw
src/nytid/signup/hr/: Makefile  hr.nw
src/nytid/signup/hr/timesheet/: README.md  __init__.py  make_timesheet.py
src/nytid/storage/: afs.nw  init.nw
src/pytid/cli/: Makefile  init.nw
src/pytid/schedules/: .gitignore  Makefile  init.nw  utils.nw
tests/: Makefile
