[tool.poetry]
name = "pytid"
version = "0.1"
description = "Library to manage teaching schedules"
authors = ["Daniel Bosk <daniel@bosk.se>"]

[tool.poetry.scripts]
pytid = 'pytid.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
ics = "^0.7"
appdirs = "^1.4.4"
argcomplete = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
